# tmsf-utils

./: README.md  send-epost-til-stemmegrupper.py  setup.cfg
