[metadata]
name = tmsf-utils
version = 0.1
summary = Små verktøy for Trøndernes Mandssangforening
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
author = Morten Brekkevold
author_email = morten@brekkevold.no
platform = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
scripts = send-epost-til-stemmegrupper.py
setup_requires =
    setuptools>=41.0
    wheel>=0.33
install_requires =
    xlrd==2.0.1
